// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API keys section index creates snapshot 1`] = `
<DocumentFragment>
  <div
    class="d-flex flex-column flex-grow-1"
  >
    <div
      class="position-absolute p-5 wrapper undefined"
    >
      <div
        class="d-flex flex-row align-items-center justify-content-center w-100 h-100"
      >
        <div
          class="spinner-border text-primary spinner undefined"
          role="status"
        >
          <span
            class="sr-only"
          >
            Loading...
          </span>
        </div>
      </div>
    </div>
    <main
      class="container p-0"
      role="main"
    >
      <div
        class="flex-grow-1"
      >
        <div
          class="d-flex flex-row align-items-center justify-content-between pb-2 border-bottom"
        >
          <div
            class="h3 pb-0 title"
          >
            API keys
          </div>
          <div>
            <button
              class="btn btn-secondary btn-sm text-uppercase btnAction"
              data-testid="addAPIKeyBtn"
            >
              <div
                class="d-flex flex-row align-items-center justify-content-center"
              >
                <svg
                  class="d-inline d-md-none"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                  />
                </svg>
                <svg
                  class="d-none d-md-inline mr-2"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                  />
                </svg>
                <span
                  class="d-none d-md-inline"
                >
                  Add
                </span>
              </div>
            </button>
          </div>
        </div>
        <div
          class="mt-4"
        />
        <div>
          <div
            class="modal modal"
            role="dialog"
          >
            <div
              class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable"
            >
              <div
                class="modal-content content modal"
              >
                <div
                  class="modal-header d-flex flex-row align-items-center header undefined"
                >
                  <div
                    class="h3 m-2 flex-grow-1 title"
                  >
                    Add API key
                  </div>
                  <button
                    class="close"
                    data-testid="closeModalBtn"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                    >
                      ×
                    </span>
                  </button>
                </div>
                <div
                  class="modal-body p-4 h-100 d-flex flex-column"
                >
                  <div
                    class="alertWrapper"
                    data-testid="alertWrapper"
                  />
                </div>
                <div
                  class="modal-footer p-3"
                >
                  <button
                    class="btn btn-sm btn-secondary"
                    data-testid="apiKeyFormBtn"
                    type="button"
                  >
                    <div
                      class="d-flex flex-row align-items-center text-uppercase"
                    >
                      <svg
                        class="mr-2"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                        />
                      </svg>
                      <div>
                        Add
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`API keys section index creates snapshot 2`] = `
<DocumentFragment>
  <div
    class="d-flex flex-column flex-grow-1"
  >
    <main
      class="container p-0"
      role="main"
    >
      <div
        class="flex-grow-1"
      >
        <div
          class="d-flex flex-row align-items-center justify-content-between pb-2 border-bottom"
        >
          <div
            class="h3 pb-0 title"
          >
            API keys
          </div>
          <div>
            <button
              class="btn btn-secondary btn-sm text-uppercase btnAction"
              data-testid="addAPIKeyBtn"
            >
              <div
                class="d-flex flex-row align-items-center justify-content-center"
              >
                <svg
                  class="d-inline d-md-none"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                  />
                </svg>
                <svg
                  class="d-none d-md-inline mr-2"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                  />
                </svg>
                <span
                  class="d-none d-md-inline"
                >
                  Add
                </span>
              </div>
            </button>
          </div>
        </div>
        <div
          class="mt-4"
        >
          <div
            class="mt-4 mt-md-5"
          >
            <div
              class="row mt-4 mt-md-5"
              data-testid="apiKeysList"
            >
              <div
                class="col-12 col-xxl-6 py-sm-3 py-2"
                data-testid="APIKeyCard"
              >
                <div
                  class="card h-100"
                >
                  <div
                    class="card-body d-flex flex-column h-100"
                  >
                    <div
                      class="d-flex flex-row w-100 justify-content-between"
                    >
                      <div
                        class="h5 mb-1 mr-2 titleCard"
                      >
                        key1
                      </div>
                      <div
                        class="ml-auto"
                      >
                        <div
                          class="dropdown-menu dropdown-menu-right p-0 dropdownMenu"
                        >
                          <div
                            class="arrow arrow"
                          />
                          <button
                            class="dropdown-item btn btn-sm rounded-0 text-secondary"
                            data-testid="updateAPIKeyBtn"
                          >
                            <div
                              class="d-flex flex-row align-items-center"
                            >
                              <svg
                                class="mr-2 btnIcon"
                                fill="currentColor"
                                height="1em"
                                stroke="currentColor"
                                stroke-width="0"
                                viewBox="0 0 512 512"
                                width="1em"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"
                                />
                              </svg>
                              <span>
                                Edit
                              </span>
                            </div>
                          </button>
                          <button
                            class="dropdown-item btn btn-sm rounded-0 text-secondary"
                            data-testid="deleteAPIKeyModalBtn"
                          >
                            <div
                              class="d-flex flex-row align-items-center"
                            >
                              <svg
                                class="mr-2 btnIcon"
                                fill="currentColor"
                                height="1em"
                                stroke="currentColor"
                                stroke-width="0"
                                viewBox="0 0 448 512"
                                width="1em"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
                                />
                              </svg>
                              <span>
                                Delete
                              </span>
                            </div>
                          </button>
                        </div>
                        <button
                          class="btn btn-light p-0 text-secondary text-center btnDropdown"
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 16 16"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M9.5 13a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm0-5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm0-5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                    <div
                      class="mt-2 text-truncate"
                    >
                      <small
                        class="text-muted text-uppercase mr-1"
                      >
                        Created at: 
                      </small>
                      <small>
                        2020/06/18 16:35:39 (+00:00)
                      </small>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="col-12 col-xxl-6 py-sm-3 py-2"
                data-testid="APIKeyCard"
              >
                <div
                  class="card h-100"
                >
                  <div
                    class="card-body d-flex flex-column h-100"
                  >
                    <div
                      class="d-flex flex-row w-100 justify-content-between"
                    >
                      <div
                        class="h5 mb-1 mr-2 titleCard"
                      >
                        key2
                      </div>
                      <div
                        class="ml-auto"
                      >
                        <div
                          class="dropdown-menu dropdown-menu-right p-0 dropdownMenu"
                        >
                          <div
                            class="arrow arrow"
                          />
                          <button
                            class="dropdown-item btn btn-sm rounded-0 text-secondary"
                            data-testid="updateAPIKeyBtn"
                          >
                            <div
                              class="d-flex flex-row align-items-center"
                            >
                              <svg
                                class="mr-2 btnIcon"
                                fill="currentColor"
                                height="1em"
                                stroke="currentColor"
                                stroke-width="0"
                                viewBox="0 0 512 512"
                                width="1em"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"
                                />
                              </svg>
                              <span>
                                Edit
                              </span>
                            </div>
                          </button>
                          <button
                            class="dropdown-item btn btn-sm rounded-0 text-secondary"
                            data-testid="deleteAPIKeyModalBtn"
                          >
                            <div
                              class="d-flex flex-row align-items-center"
                            >
                              <svg
                                class="mr-2 btnIcon"
                                fill="currentColor"
                                height="1em"
                                stroke="currentColor"
                                stroke-width="0"
                                viewBox="0 0 448 512"
                                width="1em"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
                                />
                              </svg>
                              <span>
                                Delete
                              </span>
                            </div>
                          </button>
                        </div>
                        <button
                          class="btn btn-light p-0 text-secondary text-center btnDropdown"
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 16 16"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M9.5 13a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm0-5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm0-5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                    <div
                      class="mt-2 text-truncate"
                    >
                      <small
                        class="text-muted text-uppercase mr-1"
                      >
                        Created at: 
                      </small>
                      <small>
                        2020/06/18 16:35:39 (+00:00)
                      </small>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="modal modal"
            role="dialog"
          >
            <div
              class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable"
            >
              <div
                class="modal-content content modal"
              >
                <div
                  class="modal-header d-flex flex-row align-items-center header undefined"
                >
                  <div
                    class="h3 m-2 flex-grow-1 title"
                  >
                    Add API key
                  </div>
                  <button
                    class="close"
                    data-testid="closeModalBtn"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                    >
                      ×
                    </span>
                  </button>
                </div>
                <div
                  class="modal-body p-4 h-100 d-flex flex-column"
                >
                  <div
                    class="alertWrapper"
                    data-testid="alertWrapper"
                  />
                </div>
                <div
                  class="modal-footer p-3"
                >
                  <button
                    class="btn btn-sm btn-secondary"
                    data-testid="apiKeyFormBtn"
                    type="button"
                  >
                    <div
                      class="d-flex flex-row align-items-center text-uppercase"
                    >
                      <svg
                        class="mr-2"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                        />
                      </svg>
                      <div>
                        Add
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;
